--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "inuit-clearfix": "~0.2.2",
     "inuit-starter-kit": "~0.2.9",
-    "jquery": "~2.1.0"
+    "jquery": "~2.1.0",
+    "jquery.fitvids": "fitvids#~1.1.0"
   }
 }
