--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-clean": "^0.3.1",
     "gulp-include": "^2.0.2",
     "gulp-minify-css": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "gulp-zip": "^3.0.2",
+    "yargs": "^3.24.0"
   },
   "dependencies": {
     "store": "^1.3.17"
