[plugin] Add cachebuster plugin

--- a/.htaccess
+++ b/.htaccess
@@ -12,14 +12,18 @@
     #
     # RewriteBase /mysite
 
+    # enable cachebuster plugin asset urls
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^(.+)\.(\d+)\.(js|min.js|css|min.css)$ $1.$3 [L]
+
     # block text files in the content folder from being accessed directly
-    RewriteRule ^content/(.*)\.(txt|md|mdown)$ error [R=301,L]
+    RewriteRule ^content/(.*)\.(txt|md|mdown)$ index.php [L]
 
     # block all files in the site folder from being accessed directly
-    RewriteRule ^site/(.*) error [R=301,L]
+    RewriteRule ^site/(.*) index.php [L]
 
     # block all files in the kirby folder from being accessed directly
-    RewriteRule ^kirby/(.*) error [R=301,L]
+    RewriteRule ^kirby/(.*) index.php [L]
 
     # make panel links work
     RewriteCond %{REQUEST_FILENAME} !-f
@@ -32,10 +36,3 @@
     RewriteRule ^(.*) index.php [L]
 
 </IfModule>
-
-# Additional recommended values
-# Remove comments for those you want to use.
-#
-# AddDefaultCharset UTF-8
-#
-# php_flag short_open_tag on
