[sharing] Updated sharing dropdown & meta tags

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "jdpowered/kirby-book",
     "description": "kirbyBOOK",
     "require": {
-        "mpratt/embera": "~1.8.0"
+        "mpratt/embera": "~1.8.0",
+        "jdpowered/share": "^0.1.0"
     },
     "authors": [
         {
