Update composer packages

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "kirbyBOOK",
     "require": {
         "mpratt/embera": "~1.8.0",
-        "jdpowered/share": "^0.1.0"
+        "jdpowered/share": "~0.1.1"
     },
     "authors": [
         {
