--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "inuit-clearfix": "~0.2.2",
     "inuit-starter-kit": "~0.2.9",
     "jquery": "~2.1.0",
-    "jquery.fitvids": "fitvids#~1.1.0"
+    "jquery.fitvids": "fitvids#~1.1.0",
+    "matchMedia": "~0.2.0"
   }
 }
