--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "kirby-book",
-  "version": "0.0.0",
+  "version": "1.1.0",
   "authors": [
     "Jonas Döbertin <hello@jd-powered.net>"
   ],
@@ -15,8 +15,8 @@
   "dependencies": {
     "inuit-clearfix": "~0.2.2",
     "inuit-starter-kit": "~0.2.9",
-    "jquery": "~2.1.0",
     "jquery.fitvids": "fitvids#~1.1.0",
-    "matchMedia": "~0.2.0"
+    "matchMedia": "~0.2.0",
+    "jquery-pjax": "~1.9.6"
   }
 }
