--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,6 @@
   "dependencies": {
     "inuit-clearfix": "~0.2.2",
     "inuit-starter-kit": "~0.2.9",
-    "jquery.fitvids": "fitvids#~1.1.0",
-    "matchMedia": "~0.2.0",
-    "jquery-pjax": "~1.9.6"
+    "matchMedia": "~0.2.0"
   }
 }
